# TestSlideStand

./: .gitignore  README.md  TODO.md  TestSlideStand.spec  pyinstaller_build.cmd  setup.cfg
SDKs/: README.md
src/TestSlideStand/: GUI.py  __init__.py  __main__.py  analysis.py  camera.py  gui_build.bat  mplwidget.py  settings.py  stage.py  ui_TestSlideStand.py  ui_TestSlideStand.ui
