[metadata]
name = TestSlideStand
version = attr: TestSlideStand.__version__
author = Pascal Wassam
author_email = pascal.wassam@10xgenomics.com
description = Cassini test slide verification stand
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = TestSlideStand
python_requires= >=3.10
install_requires =
    PyQt5
    pyqtgraph
    numpy
    PyDispatcher
    scipy
    coloredlogs
    IPython
    tifffile
    zaber-motion
    harvesters
    zaber-motion
    pyserial
    pypng
    opencv-python-headless
    pandas
    matplotlib
    scikit-image

;[options.entry_points]
;console_scripts =
;    TestSlideStand = TestSlideStand.__main__:main